--- a/core/keys/src/main/res/values/keys.xml
+++ b/core/keys/src/main/res/values/keys.xml
@@ -163,4 +163,8 @@
     <string name="key_overview_quick_wizard_settings" translatable="false">overview_quickwizard_settings</string>
     <string name="key_statuslights_copy_ns" translatable="false">statuslights_copy_ns</string>
 
+    <!--    Virtual Pump-->
+    <string name="key_virtual_pump_type" translatable="false">virtualpump_type</string>
+    <string name="key_virtual_pump_upload_status" translatable="false">virtualpump_uploadstatus</string>
+
 </resources>
