--- a/plugins/source/src/main/res/xml/pref_dexcom.xml
+++ b/plugins/source/src/main/res/xml/pref_dexcom.xml
@@ -7,11 +7,11 @@
         android:title="@string/bgsource_upload"
         app:initialExpandedChildrenCount="0">
 
-        <app.aaps.core.keys.AdaptiveSwitchPreference
+        <app.aaps.core.validators.AdaptiveSwitchPreference
             android:key="@string/key_do_bg_ns_upload"
             android:title="@string/do_ns_upload_title" />
 
-        <app.aaps.core.keys.AdaptiveSwitchPreference
+        <app.aaps.core.validators.AdaptiveSwitchPreference
             android:key="@string/key_dexcom_log_ns_sensor_change"
             android:summary="@string/dexcom_log_ns_sensor_change_summary"
             android:title="@string/dexcom_log_ns_sensor_change_title" />
