--- a/core/ui/src/main/res/values/styles.xml
+++ b/core/ui/src/main/res/values/styles.xml
@@ -324,6 +324,20 @@
         <item name="android:background">@drawable/dialog_header</item>
     </style>
 
+    <style name="ToggleBtnStyle">
+        <item name="android:background">@drawable/toggle_button_selector</item>
+        <item name="android:layout_width">0dp</item>
+        <item name="android:layout_height">match_parent</item>
+        <item name="android:layout_weight">1</item>
+        <item name="android:checked">true</item>
+        <item name="android:padding">7dp</item>
+        <item name="android:textOn"></item>
+        <item name="android:textOff"></item>
+        <item name="android:layout_marginEnd">2dp</item>
+        <item name="android:clickable">true</item>
+        <item name="android:focusable">true</item>
+    </style>
+
     <style name="OkCancelButton.Text" ns2:ignore="NewApi">
         <item name="android:textSize">@dimen/material_button_text_size</item>
         <item name="android:singleLine">true</item>
