--- a/core/ui/src/main/res/drawable/toggle_button_selector.xml
+++ b/core/ui/src/main/res/drawable/toggle_button_selector.xml
@@ -1,17 +1,22 @@
 <?xml version="1.0" encoding="utf-8"?>
-<selector xmlns:android="http://schemas.android.com/apk/res/android">
-    <item android:state_checked="true">
-        <shape android:shape="rectangle">
-            <solid android:color="@color/toggle_button_background" />
-            <corners android:radius="10dp" />
-            <stroke android:width="1dp" android:color="@color/toggle_button_stroke" />
-        </shape>
+<ripple xmlns:android="http://schemas.android.com/apk/res/android"
+    android:color="?attr/colorControlHighlight">
+    <item>
+        <selector>
+            <item android:state_checked="true">
+                <shape android:shape="rectangle">
+                    <corners android:radius="10dp" />
+                    <solid android:color="@color/toggle_button_background" />
+                    <stroke android:width="1dp" android:color="@color/toggle_button_stroke" />
+                </shape>
+            </item>
+            <item android:state_checked="false">
+                <shape android:shape="rectangle">
+                    <corners android:radius="10dp" />
+                    <solid android:color="@color/toggle_button_background" />
+                    <stroke android:width="1dp" android:color="@color/toggle_button_stroke" />
+                </shape>
+            </item>
+        </selector>
     </item>
-    <item android:state_checked="false">
-        <shape android:shape="rectangle">
-            <solid android:color="@color/toggle_button_background" />
-            <corners android:radius="10dp" />
-            <stroke android:width="1dp" android:color="@color/toggle_button_stroke" />
-        </shape>
-    </item>
-</selector>
+</ripple>
