--- a/plugins/constraints/src/main/res/values/exam.xml
+++ b/plugins/constraints/src/main/res/values/exam.xml
@@ -103,11 +103,13 @@
     <string name="troubleshooting_wheretoask">Where can you look for help with AAPS?</string>
     <string name="troubleshooting_fb">You can ask for advice in the AAPS Users Facebook group.</string>
     <string name="troubleshooting_wiki">You should read (and re-read) the AAPS documentation.</string>
-    <string name="troubleshooting_gitter">You can ask for advice and log technical problems or issues in the AAPS Discord.</string>
+    <string name="troubleshooting_discord">You can ask for advice, discuss technical problems and feature requests in the AAPS Discord.</string>
+    <string name="troubleshooting_github">You can submit issues such as bugs and feature requests at Github.</string>
     <string name="troubleshooting_yourendo">You should ask your diabetes clinic/endocrinologist.</string>
     <string name="troubleshooting_hint1">https://wiki.aaps.app/en/latest/Installing-AndroidAPS/Update-to-new-version.html#troubleshooting</string>
     <string name="troubleshooting_hint2">https://www.facebook.com/groups/AndroidAPSUsers/</string>
     <string name="troubleshooting_hint3">https://discord.gg/4fQUWHZ4Mw</string>
+    <string name="troubleshooting_hint4">https://github.com/nightscout/AndroidAPS/issues</string>
     <string name="insulin_plugins">Insulin Plugins</string>
     <string name="insulin_ultrarapid">Which insulin should you use with the Ultra-Rapid Oref plugin?</string>
     <string name="insulin_fiasp">Fiasp®</string>
