--- a/pump/omnipod-dash/src/main/res/layout/omnipod_dash_overview_bluetooth_status.xml
+++ b/pump/omnipod-dash/src/main/res/layout/omnipod_dash_overview_bluetooth_status.xml
@@ -37,9 +37,9 @@
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1.3"
-                    android:paddingStart="2dp"
-                    android:paddingEnd="2dp"
+                    android:layout_weight="1.5"
+                    android:paddingStart="4dp"
+                    android:paddingEnd="4dp"
                     android:text="@string/omnipod_dash_overview_bluetooth_address"
                     android:textAlignment="viewEnd"
                     android:textSize="14sp" />
@@ -50,16 +50,18 @@
                     android:layout_gravity="center_vertical"
                     android:text=":"
                     android:textSize="14sp"
+                    android:layout_marginEnd="8dp"
                     tools:ignore="HardcodedText" />
 
                 <TextView
                     android:id="@+id/omnipod_dash_bluetooth_address"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1.7"
-                    android:paddingStart="2dp"
-                    android:paddingEnd="2dp"
+                    android:layout_weight="2.0"
+                    android:paddingStart="4dp"
+                    android:paddingEnd="4dp"
                     android:textAlignment="viewStart"
+                    android:textIsSelectable="true"
                     android:textSize="14sp" />
             </LinearLayout>
 
@@ -73,9 +75,9 @@
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1.3"
-                    android:paddingStart="2dp"
-                    android:paddingEnd="2dp"
+                    android:layout_weight="1.5"
+                    android:paddingStart="4dp"
+                    android:paddingEnd="4dp"
                     android:text="@string/omnipod_dash_overview_bluetooth_status"
                     android:textAlignment="viewEnd"
                     android:textSize="14sp" />
@@ -86,15 +88,16 @@
                     android:layout_gravity="center_vertical"
                     android:text=":"
                     android:textSize="14sp"
+                    android:layout_marginEnd="8dp"
                     tools:ignore="HardcodedText" />
 
                 <com.joanzapata.iconify.widget.IconTextView
                     android:id="@+id/omnipod_dash_bluetooth_status"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1.7"
-                    android:paddingStart="2dp"
-                    android:paddingEnd="2dp"
+                    android:layout_weight="2.0"
+                    android:paddingStart="4dp"
+                    android:paddingEnd="4dp"
                     android:textAlignment="viewStart"
                     android:textSize="14sp"
                     tools:ignore="HardcodedText" />
@@ -112,9 +115,9 @@
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1.3"
-                    android:paddingStart="2dp"
-                    android:paddingEnd="2dp"
+                    android:layout_weight="1.5"
+                    android:paddingStart="4dp"
+                    android:paddingEnd="4dp"
                     android:text="@string/omnipod_dash_overview_bluetooth_connection_quality"
                     android:textAlignment="viewEnd"
                     android:textSize="14sp" />
@@ -125,15 +128,16 @@
                     android:layout_gravity="center_vertical"
                     android:text=":"
                     android:textSize="14sp"
+                    android:layout_marginEnd="8dp"
                     tools:ignore="HardcodedText" />
 
                 <com.joanzapata.iconify.widget.IconTextView
                     android:id="@+id/omnipod_dash_bluetooth_connection_quality"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1.7"
-                    android:paddingStart="2dp"
-                    android:paddingEnd="2dp"
+                    android:layout_weight="2.0"
+                    android:paddingStart="4dp"
+                    android:paddingEnd="4dp"
                     android:textAlignment="viewStart"
                     android:textSize="14sp"
                     tools:ignore="HardcodedText" />
@@ -151,9 +155,9 @@
                 <TextView
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1.3"
-                    android:paddingStart="2dp"
-                    android:paddingEnd="2dp"
+                    android:layout_weight="1.5"
+                    android:paddingStart="4dp"
+                    android:paddingEnd="4dp"
                     android:text="@string/omnipod_dash_overview_delivery_status"
                     android:textAlignment="viewEnd"
                     android:textSize="14sp" />
@@ -164,15 +168,16 @@
                     android:layout_gravity="center_vertical"
                     android:text=":"
                     android:textSize="14sp"
+                    android:layout_marginEnd="8dp"
                     tools:ignore="HardcodedText" />
 
                 <com.joanzapata.iconify.widget.IconTextView
                     android:id="@+id/omnipod_dash_delivery_status"
                     android:layout_width="0dp"
                     android:layout_height="wrap_content"
-                    android:layout_weight="1.7"
-                    android:paddingStart="2dp"
-                    android:paddingEnd="2dp"
+                    android:layout_weight="2.0"
+                    android:paddingStart="4dp"
+                    android:paddingEnd="4dp"
                     android:textAlignment="viewStart"
                     android:textSize="14sp"
                     tools:ignore="HardcodedText" />
